--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,43 @@
+.parent{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .child{
-	width: 50%;
-	border: 1px groove #f51ec1;
+	width: 20%;
+	border: 1px solid #000;
+	padding: 2%;
+	margin: 5%;
+	box-shadow: 0px 8px 8px -8px #f51ec1;
+	border-radius: 5%;
+	text-align: center;
+}
+
+.profile{
+	width: 100px;
+	border: 1px solid #000;
 	padding: 1%;
-	margin: 2%;
-	box-shadow: 0px 8px 8px -8px #000;
+	margin: 1%;
+	box-shadow: 0px 8px 9px -8px #000;
+	border-radius: 70%;
+
+}
+
+.contact{
+	width: 50px;
+	<!-- display: block; -->
+}
+
+@media only screen and (min-width: 320px) and (max-width: 640px ){
+	.child{
+		width: 90%;
+		border: 1px solid #000;
+		padding: 2%;
+		margin: 5%;
+		box-shadow: 0px 8px 8px -8px #000;
+		border-radius: 5%;
+		text-align: center;
+	}
 }
